tooling/nargo_cli/tests/snapshots/execution_success/simple_bitwise/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "c",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      },
      {
        "name": "d",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 8
      },
      "visibility": "public"
    },
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _13",
    "private parameters indices : [_0, _1, _2, _3]",
    "public parameters indices : []",
    "return value indices : [_4]",
    "BLACKBOX::RANGE [(_0, 1)] []",
    "BLACKBOX::RANGE [(_1, 1)] []",
    "BLACKBOX::RANGE [(_2, 8)] []",
    "BLACKBOX::RANGE [(_3, 8)] []",
    "BLACKBOX::AND [(_2, 8), (_3, 8)] [_5]",
    "BLACKBOX::XOR [(_2, 8), (_3, 8)] [_6]",
    "EXPR [ (-1, _2) (-1, _7) 255 ]",
    "EXPR [ (-1, _3) (-1, _8) 255 ]",
    "BLACKBOX::AND [(_7, 8), (_8, 8)] [_9]",
    "EXPR [ (-2, _0, _1) (2, _0) (2, _1) (-1, _10) 0 ]",
    "BLACKBOX::RANGE [(_10, 8)] []",
    "EXPR [ (1, _5) (1, _10) (-1, _11) 0 ]",
    "BLACKBOX::RANGE [(_11, 8)] []",
    "EXPR [ (1, _6) (1, _11) (-1, _12) 0 ]",
    "BLACKBOX::RANGE [(_12, 8)] []",
    "EXPR [ (-1, _9) (1, _12) (-1, _13) 255 ]",
    "BLACKBOX::RANGE [(_13, 8)] []",
    "EXPR [ (1, _4) (-1, _13) 0 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": []
}
