tooling/nargo_cli/tests/snapshots/execution_success/simple_bitwise/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1, v1: u1, v2: u8, v3: u8):
    (no terminator instruction)
}
[simple_bitwise] Circuit output: 24
